# com_interfaces

./: .gitignore  LICENSE.txt  README.md  example.py  noxfile.py  pyproject.toml  setup.py
com_interfaces/: __init__.py  iunknown.py
com_interfaces/interfaces/: __init__.py  ipersistfile.py  ishelllink.py  itaskbarlist3.py
