[tool.poetry]
name = "com-interfaces"
version = "1.0.1"
description = ""
authors = ["Makarov Andrey <winandfx@gmail.com>"]
readme = "README.md"
packages = [{include = "com_interfaces"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
