[tool.poetry]
name = "com-interfaces"
version = "1.0.1"
description = ""
authors = ["Makarov Andrey <winandfx@gmail.com>"]
readme = "README.md"
packages = [{include = "com_interfaces"}]

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
mypy = "^1.0.0"
pyright = "^1.1.293"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
